# codex-rev

./: .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  config.example.yml  index.html  middleware.ts  next.config.mjs  package.json  pyproject.toml  script.js  styles.css  tailwind.config.ts  tsconfig.json
prisma/: schema.prisma  seed.ts
sample_data/: listing.html  property.html
src/: mdx-components.tsx
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
src/app/accessibility/: page.tsx
src/app/account/: page.tsx
src/app/admin/: page.tsx
src/app/api/checkout/: route.ts
src/app/blog/: page.tsx
src/app/bundles/: page.tsx
src/app/club/: page.tsx
src/app/contact/: page.tsx
src/app/ebooks/: page.tsx
src/app/faq/: page.tsx
src/app/legal/: page.tsx
src/components/: blog-card.tsx  bundle-card.tsx  faq-accordion.tsx  hero.tsx  mdx-callout.tsx  product-card.tsx  site-footer.tsx  site-header.tsx  theme-toggle.tsx
src/components/ui/: badge.tsx  rating-stars.tsx
src/content/blog/: les-bons-reflexes-numeriques.mdx  rituels-de-sommeil-apres-60-ans.mdx  stimuler-sa-memoire-chaque-jour.mdx
src/lib/: blog.ts  downloads.ts  email.ts  s3.ts  seed-data.ts  stripe.ts  types.ts
src/lib/auth/: options.ts
src/lib/emails/: templates.ts
src/types/: next-auth.d.ts
src/vacation_reviews/: __init__.py  cli.py  models.py  scraper.py  simple_requests.py  simple_soup.py  simple_yaml.py  storage.py  wordpress.py
tests/: downloads.test.ts  test_mapper.py  test_scraper.py  test_storage.py
(+7 files in other folders)
